--- a/index.html
+++ b/index.html
@@ -5,5 +5,34 @@
 <p>I'm hosted with GitHub Pages.</p>
 
 <img src="Champions/AatroxSquare.png" alt="">
+<img src="Champions/AhriSquare.png" alt="">
+<img src="Champions/AkaliSquare.png" alt="">
+<img src="Champions/AlistarSquare.png" alt="">
+<img src="Champions/AmumuSquare.png" alt="">
+<img src="Champions/AniviaSquare.png" alt="">
+<img src="Champions/AnnieSquare.png" alt="">
+<img src="Champions/AsheSquare.png" alt="">
+<img src="Champions/AurelionSquare.png" alt="">
+<img src="Champions/AzirSquare.png" alt="">
+<img src="Champions/BardSquare.png" alt="">
+<img src="Champions/BlitzcrankSquare.png" alt="">
+<img src="Champions/BraumSquare.png" alt="">
+<img src="Champions/BrandSquare.png" alt="">
+<img src="Champions/CaitlynSquare.png" alt="">
+<img src="Champions/CamilleSquare.png" alt="">
+<img src="Champions/CassopeiaSquare.png" alt="">
+<img src="Champions/ChoGathSquare.png" alt="">
+<img src="Champions/CorkiSquare.png" alt="">
+<img src="Champions/DariusSquare.png" alt="">
+<img src="Champions/DianaSquare.png" alt="">
+<img src="Champions/DravenSquare.png" alt="">
+<img src="Champions/DrMundoSquare.png" alt="">
+<img src="Champions/EkkoSquare.png" alt="">
+<img src="Champions/EliseSquare.png" alt="">
+<img src="Champions/EvelynnSquare.png" alt="">
+<img src="Champions/EzrealSquare.png" alt="">
+<img src="Champions/FiddlesticksSquare.png" alt="">
+<img src="Champions/FioraSquare.png" alt="">
+
 </body>
 </html>
