--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-
-<img src="Champions/AhriSquare.png" alt="">
 <img src="Champions/AatroxSquare.png" alt="">
+<img src="Champions/AhriSquare.png" alt="">
 <img src="Champions/AkaliSquare.png" alt="">
 <img src="Champions/AlistarSquare.png" alt="">
 <img src="Champions/AmumuSquare.png" alt="">
@@ -33,6 +32,79 @@
 <img src="Champions/EzrealSquare.png" alt="">
 <img src="Champions/FiddlesticksSquare.png" alt="">
 <img src="Champions/FioraSquare.png" alt="">
+<img src="Champions/FizzSquare.png" alt="">
+<img src="Champions/GalioSquare.png" alt="">
+<img src="Champions/GangplankSquare.png" alt="">
+<img src="Champions/GarenSquare.png" alt="">
+<img src="Champions/GnarSquare.png" alt="">
+<img src="Champions/GragasSquare.png" alt="">
+<img src="Champions/GravesSquare.png" alt="">
+<img src="Champions/HecarimSquare.png" alt="">
+<img src="Champions/HeimerdingerSquare.png" alt="">
+<img src="Champions/IllaoiSquare.png" alt="">
+<img src="Champions/IreliaSquare.png" alt="">
+<img src="Champions/IvernSquare.png" alt="">
+<img src="Champions/JannaSquare.png" alt="">
+<img src="Champions/JarvanIVSquare.png" alt="">
+<img src="Champions/JaxSquare.png" alt="">
+<img src="Champions/JayceSquare.png" alt="">
+<img src="Champions/JhinSquare.png" alt="">
+<img src="Champions/JinxSquare.png" alt="">
+<img src="Champions/Kai'SaSquare.png" alt="">
+<img src="Champions/KalistaSquare.png" alt="">
+<img src="Champions/KarmaSquare.png" alt="">
+<img src="Champions/KarthusSquare.png" alt="">
+<img src="Champions/KassadinSquare.png" alt="">
+<img src="Champions/KayleSquare.png" alt="">
+<img src="Champions/KaynSquare.png" alt="">
+<img src="Champions/KennenSquare.png" alt="">
+<img src="Champions/Kha'ZixSquare.png" alt="">
+<img src="Champions/KindredSquare.png" alt="">
+<img src="Champions/KledSquare.png" alt="">
+<img src="Champions/Kog'MawSquare.png" alt="">
+<img src="Champions/LeBlancSquare.png" alt="">
+<img src="Champions/Lee_SinSquare.png" alt="">
+<img src="Champions/LeonaSquare.png" alt="">
+<img src="Champions/LissandraSquare.png" alt="">
+<img src="Champions/LucianSquare.png" alt="">
+<img src="Champions/LuluSquare.png" alt="">
+<img src="Champions/LuxSquare.png" alt="">
+<img src="Champions/MalphiteSquare.png" alt="">
+<img src="Champions/MalzaharSquare.png" alt="">
+<img src="Champions/MaokaiSquare.png" alt="">
+<img src="Champions/Master_YiSquare.png" alt="">
+<img src="Champions/MissFortuneSquare.png" alt="">
+<img src="Champions/MorganaSquare.png" alt="">
+<img src="Champions/NamiSquare.png" alt="">
+<img src="Champions/NasusSquare.png" alt="">
+<img src="Champions/NautilusSquare.png" alt="">
+<img src="Champions/NeekoSquare.png" alt="">
+<img src="Champions/NidaleeSquare.png" alt="">
+<img src="Champions/NocturneSquare.png" alt="">
+<img src="Champions/Nunu_&_WillumpSquare.png" alt="">
+<img src="Champions/OlafSquare.png" alt="">
+<img src="Champions/OriannaSquare.png" alt="">
+<img src="Champions/PantheonSquare.png" alt="">
+<img src="Champions/PoppySquare.png" alt="">
+<img src="Champions/PykeSquare.png" alt="">
+<img src="Champions/QiyanaSquare.png" alt="">
+<img src="Champions/QuinnSquare.png" alt="">
+<img src="Champions/RakanSquare.png" alt="">
+<img src="Champions/RammusSquare.png" alt="">
+<img src="Champions/Rek'SaiSquare.png" alt="">
+<img src="Champions/RenektonSquare.png" alt="">
+<img src="Champions/RengarSquare.png" alt="">
+<img src="Champions/RivenSquare.png" alt="">
+<img src="Champions/RumbleSquare.png" alt="">
+<img src="Champions/RyzeSquare.png" alt="">
+<img src="Champions/SejuaniSquare.png" alt="">
+<img src="Champions/ShacoSquare.png" alt="">
+<img src="Champions/ShenSquare.png" alt="">
+<img src="Champions/ShyvanaSquare.png" alt="">
+<img src="Champions/SingedSquare.png" alt="">
+
+
+
 
 </body>
 </html>
