--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
 <img src="Champions/AatroxSquare.png" alt="">
 <img src="Champions/AhriSquare.png" alt="">
 <img src="Champions/AkaliSquare.png" alt="">
@@ -102,6 +103,45 @@
 <img src="Champions/ShenSquare.png" alt="">
 <img src="Champions/ShyvanaSquare.png" alt="">
 <img src="Champions/SingedSquare.png" alt="">
+<img src="Champions/SionSquare.png" alt="">
+<img src="Champions/SivirSquare.png" alt="">
+<img src="Champions/SkarnerSquare.png" alt="">
+<img src="Champions/SonaSquare.png" alt="">
+<img src="Champions/SorakaSquare.png" alt="">
+<img src="Champions/SwainSquare.png" alt="">
+<img src="Champions/SylasSquare.png" alt="">
+<img src="Champions/SyndraSquare.png" alt="">
+<img src="Champions/Tahm_KenchSquare.png" alt="">
+<img src="Champions/TaliyahSquare.png" alt="">
+<img src="Champions/TalonSquare.png" alt="">
+<img src="Champions/TaricSquare.png" alt="">
+<img src="Champions/TeemoSquare.png" alt="">
+<img src="Champions/ThreshSquare.png" alt="">
+<img src="Champions/TristanaSquare.png" alt="">
+<img src="Champions/TrundleSquare.png" alt="">
+<img src="Champions/TryndamereSquare.png" alt="">
+<img src="Champions/Twisted_FateSquare.png" alt="">
+<img src="Champions/TwitchSquare.png" alt="">
+<img src="Champions/UdyrSquare.png" alt="">
+<img src="Champions/UrgotSquare.png" alt="">
+<img src="Champions/VarusSquare.png" alt="">
+<img src="Champions/VayneSquare.png" alt="">
+<img src="Champions/VeigarSquare.png" alt="">
+<img src="Champions/Vel'KozSquare.png" alt="">
+<img src="Champions/ViktorSquare.png" alt="">
+<img src="Champions/ViSquare.png" alt="">
+<img src="Champions/VladimirSquare.png" alt="">
+<img src="Champions/VolibearSquare.png" alt="">
+<img src="Champions/WarwickSquare.png" alt="">
+<img src="Champions/WukongSquare.png" alt="">
+<img src="Champions/XayahSquare.png" alt="">
+<img src="Champions/XerathSquare.png" alt="">
+<img src="Champions/Xin_ZhaoSquare.png" alt="">
+<img src="Champions/YasuoSquare.png" alt="">
+<img src="Champions/YorickSquare.png" alt="">
+<img src="Champions/YuumiSquare.png" alt="">
+<img src="Champions/ZacSquare.png" alt="">
+
 
 
 
