--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Katurmus Drafting Software</h1>
+<p>Twitch.tv/Katurmus</p>
 
 <img src="Champions/AatroxSquare.png" alt="">
 <img src="Champions/AhriSquare.png" alt="">
