--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 <h1>Katurmus Drafting Software</h1>
 <p>Twitch.tv/Katurmus</p>
 
+.dragzone,.dropzone
+{
+    height 120px;
+    width 40%;
+    border:2px solid black;
+}
+
+<div class ="dragzone">
+    <img src="Champions/AatroxSquare.png" alt="">
+</div>
+<div class = "dropzone">
+
+</div>
 <img src="Champions/AatroxSquare.png" alt="">
 <img src="Champions/AhriSquare.png" alt="">
 <img src="Champions/AkaliSquare.png" alt="">
