--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title> Katurmus Drafting Project</title>
+    <style type ="test/css"> 
+
+        *{
+            margin: 0px;
+            padding: 0px;
+        }
+        .dragzone,.dropzone
+        {
+            height: 120px;
+            width: 40%;
+            border:2px solid black;
+        }
+    </style>
+</head>
 <body>
-<h1>Katurmus Drafting Software</h1>
-<p>Twitch.tv/Katurmus</p>
 
 
-.dragzone,.dropzone
-{
-    height 120px;
-    width 40%;
-    border:2px solid black;
-}
 
 <div class ="dragzone">
     <img src="Champions/AatroxSquare.png" alt="">
@@ -18,6 +26,10 @@
 <div class = "dropzone">
 
 </div>
+
+
+
+
 <img src="Champions/AatroxSquare.png" alt="">
 <img src="Champions/AhriSquare.png" alt="">
 <img src="Champions/AkaliSquare.png" alt="">
