--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
     <title>Katurmus Drafting Project</title>
+    <style>
+            #div1 {
+              width: 350px;
+              height: 70px;
+              padding: 10px;
+              border: 1px solid #aaaaaa;
+            }
+    </style>
     <script>
             function allowDrop(ev) {
               ev.preventDefault();
@@ -16,12 +24,12 @@
               var data = ev.dataTransfer.getData("text");
               ev.target.appendChild(document.getElementById(data));
             }
-            
+
     </script>
 
 </head>
 <body>
-
+        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
     <img id ="Aatrox" draggable="true" ondragstart="drag(event)" src="Champions/AatroxSquare.png" alt="">
 
 
