--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Katurmus Drafting Project</title>
     <style>
             #div1 {
-              width: 350px;
-              height: 70px;
-              padding: 10px;
-              border: 1px solid #aaaaaa;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
             }
     </style>
     <script>
@@ -29,6 +29,9 @@
 
 </head>
 <body>
+        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
     <img id ="Aatrox" draggable="true" ondragstart="drag(event)" src="Champions/AatroxSquare.png" alt="">
 
