--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
               border: 3px solid #aaaaaa;
             }
             #div2 {
-              width: 720px;
+              width: 1440px;
               height: 5000px;
               padding: 0px;
               border: 3px solid #aaaaaa;
@@ -36,7 +36,7 @@
 
 </head>
 <body>
-        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="div1" x = 20 y =20 ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
