--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 </head>
 <body>
-        <div id="div1" x = 20 y =20 ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="div1" x = "400" y = "0" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
