--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <title>Katurmus Drafting Project</title>
     <style>
-            #div1 {
+            #div3 {
+              top: 100px;
+              left: 100px;
               width: 120px;
               height: 120px;
               padding: 0px;
               border: 3px solid #aaaaaa;
             }
+            #div1 {
+            
+            width: 120px;
+            height: 120px;
+            padding: 0px;
+            border: 3px solid #aaaaaa;
+          }
             #div2 {
               width: 1440px;
               height: 5000px;
@@ -36,7 +45,7 @@
 
 </head>
 <body>
-        <div id="div1" x = "400" y = "0" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="div3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
