--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Katurmus Drafting Project</title>
     <style>
             #div3 {
+                position: absolute;
               top: 100px;
               left: 100px;
               width: 120px;
