--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Katurmus Drafting Project</title>
     <style>
-            #div3 {
+            #ban1 {
                 position: absolute;
               top: 100px;
               left: 100px;
@@ -12,13 +12,42 @@
               padding: 0px;
               border: 3px solid #aaaaaa;
             }
-            #div1 {
-            
-            width: 120px;
-            height: 120px;
-            padding: 0px;
-            border: 3px solid #aaaaaa;
-          }
+            #ban2 {
+                position: absolute;
+              top: 100px;
+              left: 220px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #ban3 {
+                position: absolute;
+              top: 100px;
+              left: 340px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #ban4 {
+                position: absolute;
+              top: 100px;
+              left: 460px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #ban5 {
+                position: absolute;
+              top: 100px;
+              left: 580px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
             #div2 {
               width: 1440px;
               height: 5000px;
@@ -46,10 +75,11 @@
 
 </head>
 <body>
-        <div id="div3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="ban1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="ban2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="ban3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="ban4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="ban5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)">
                 <img id ="Aatrox" draggable="true" ondragstart="drag(event)" src="Champions/AatroxSquare.png" alt="">
                 <img id ="Ahri" draggable="true" ondragstart="drag(event)" src="Champions/AhriSquare.png" alt="">
