--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
               height: 5000px;
               padding: 0px;
               border: 3px solid #aaaaaa;
+              top: 600px;
             }
             #myInput {
               background-image: url('/css/searchicon.png');
