--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
               // Loop through all table rows, and hide those who don't match the search query
               for (i = 0; i < tr.length; i++) {
-                td = tr[i].getElementsByTagName("td")[1];
+                td = tr[i].getAttributeNames("id");
                 if (td) {
                   txtValue = td.textContent || td.innerText;
                   if (txtValue.toUpperCase().indexOf(filter) > -1) {
@@ -119,11 +119,9 @@
        <table id= "champions">
          <tr>
             <td><img id ="Aatrox" onclick="clicked()" draggable="true" ondragstart="drag(event)" src="Champions/AatroxSquare.png" alt=""></td>
-            <td>aatrox</td>
          </tr>
          <tr>
            <td>  <img id ="Ahri" draggable="true" ondragstart="drag(event)" src="Champions/AhriSquare.png" alt=""> </td>
-           <td>ahri</td>
          </tr>
        </table>   
       <!--
