--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               // Loop through all table rows, and hide those who don't match the search query
               for (i = 0; i < tr.length; i++) {
                 td = tr[i].id;
-                alert(td);
+                alert("hi");
                 if (td) {
                   txtValue = td;
                   if (txtValue.toUpperCase().indexOf(filter) > -1) {
