--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <input type="text" id="myInput" onkeyup="search()" placeholder="Search for Champions.." title="Type in a name">
        <table id= "champions">
          <tr>
-            <td>Aatrox</td>
+            <td><!--Aatrox--></td>
             <td><img id ="Aatrox" onclick="clicked()" draggable="true" ondragstart="drag(event)" src="Champions/AatroxSquare.png" alt=""></td>
          </tr>
          <tr>
