--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
               // Loop through all table rows, and hide those who don't match the search query
               for (i = 0; i < tr.length; i++) {
-                td = tr[i].id;
+                td = tr[i].getAttribute('id');
                 if (td) {
                   alert('td');
                   txtValue = td;
