--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
               // Loop through all table rows, and hide those who don't match the search query
               for (i = 0; i < tr.length; i++) {
                 td = tr[i].getAttribute('id');
+                alert(td);
                 if (td) {
-                  alert('td');
+                  alert(td);
                   txtValue = td;
                   if (txtValue.toUpperCase().indexOf(filter) > -1) {
                     tr[i].style.display = "";
