--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               // Loop through all table rows, and hide those who don't match the search query
               for (i = 0; i < tr.length; i++) {
                 td = tr[i].getElementsByTagName("td")[0].getAttribute("alt");
-                alert(td);
+                console.log(td);
                 if (td) {
                   //alert(td);
                   txtValue = td;
