--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
 
               // Loop through all table rows, and hide those who don't match the search query
               for (i = 0; i < tr.length; i++) {
-                td = tr[i].getElementsByTagName("td")[0].getAttribute("alt");
-                console.log(td);
+                td = td = tr[i].getElementsByTagName("td")[0].getElementsByTagName("img")[0].getAttribute("alt");
                 if (td) {
                   //alert(td);
                   txtValue = td;
