--- a/index.html
+++ b/index.html
@@ -73,19 +73,20 @@
               var input, filter, table, tr, td, i, txtValue;
               input = document.getElementById("myInput");
               filter = input.value.toUpperCase();
-              table = document.getElementById("champions");
-              tr = table.getElementsByTagName("tr");
+              table = document.getElementsByClassName("champ")
+              //-tr = table.getElementsByTagName("tr");
 
               // Loop through all table rows, and hide those who don't match the search query
               for (i = 0; i < tr.length; i++) {
-                td = td = tr[i].getElementsByTagName("td")[0].getElementsByTagName("img")[0].getAttribute("alt");
+                //td = tr[i].getElementsByTagName("td")[0].getElementsByTagName("img")[0].getAttribute("alt");
+                td = table[i].getElementsByTagName("img")[0].getAttribute("alt");
                 if (td) {
                   //alert(td);
                   txtValue = td;
                   if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                    tr[i].style.display = "";
+                    table[i].style.display = "";
                   } else {
-                    tr[i].style.display = "none";
+                    table[i].style.display = "none";
                   }
                 }
               }
@@ -117,35 +118,47 @@
         <div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)">
 
         <input type="text" id="myInput" onkeyup="search()" placeholder="Search for Champions.." title="Type in a name">
+        <!--
        <table id= "champions">
-         <tr>
-            <td ><img id ="1" onclick="clicked()" draggable="true" ondragstart="drag(event)" src="Champions/AatroxSquare.png" alt="Aatrox"></td>
-         </tr>
-         <tr>
-           <td ><img id ="Ahri" draggable="true" ondragstart="drag(event)" src="Champions/AhriSquare.png" alt="Ahri"> </td>
-         </tr>
-       </table>   
-     
-        <img id ="Akali" draggable="true" ondragstart="drag(event)" src="Champions/AkaliSquare.png" alt="">
-         <!--
-        <img id ="Alistar" draggable="true" ondragstart="drag(event)" src="Champions/AlistarSquare.png" alt="">
-        <img id ="2" draggable="true" ondragstart="drag(event)" src="Champions/AmumuSquare.png" alt="">
-        <img id ="3" draggable="true" ondragstart="drag(event)" src="Champions/AniviaSquare.png" alt="">
-        <img id ="4" draggable="true" ondragstart="drag(event)" src="Champions/AnnieSquare.png" alt="">
-        <img id ="5" draggable="true" ondragstart="drag(event)" src="Champions/AsheSquare.png" alt="">
-        <img id ="6" draggable="true" ondragstart="drag(event)" src="Champions/AurelionSquare.png" alt="">
-        <img id ="7" draggable="true" ondragstart="drag(event)" src="Champions/AzirSquare.png" alt="">
-        <img id ="8" draggable="true" ondragstart="drag(event)" src="Champions/BardSquare.png" alt="">
-        <img id ="9" draggable="true" ondragstart="drag(event)" src="Champions/BlitzcrankSquare.png" alt="">
-        <img id ="10" draggable="true" ondragstart="drag(event)" src="Champions/BraumSquare.png" alt="">
-        <img id ="11" draggable="true" ondragstart="drag(event)" src="Champions/BrandSquare.png" alt="">
-        <img id ="12" draggable="true" ondragstart="drag(event)" src="Champions/CaitlynSquare.png" alt="">
-        <img id ="14" draggable="true" ondragstart="drag(event)" src="Champions/CamilleSquare.png" alt="">
-        <img id ="15" draggable="true" ondragstart="drag(event)" src="Champions/CassopeiaSquare.png" alt="">
-        <img id ="16" draggable="true" ondragstart="drag(event)" src="Champions/ChoGathSquare.png" alt="">
-        <img id ="17" draggable="true" ondragstart="drag(event)" src="Champions/CorkiSquare.png" alt="">
-        <img id ="18" draggable="true" ondragstart="drag(event)" src="Champions/DariusSquare.png" alt="">
-        <img id ="13" draggable="true" ondragstart="drag(event)" src="Champions/DianaSquare.png" alt="">
+         <tr><td ><img id ="1" onclick="clicked()" draggable="true" ondragstart="drag(event)" src="Champions/AatroxSquare.png" alt="Aatrox"></td></tr>
+         <tr><td ><img id ="Ahri" draggable="true" ondragstart="drag(event)" src="Champions/AhriSquare.png" alt="Ahri"> </td></tr>  
+        <tr><td><img id ="Akali" draggable="true" ondragstart="drag(event)" src="Champions/AkaliSquare.png" alt="Akali"></td></tr>
+        <tr><td><img id ="Alistar" draggable="true" ondragstart="drag(event)" src="Champions/AlistarSquare.png" alt="Alistar"></td></tr>
+        <tr><td> <img id ="2" draggable="true" ondragstart="drag(event)" src="Champions/AmumuSquare.png" alt="Amumu"></td></tr>
+        <tr><td><img id ="3" draggable="true" ondragstart="drag(event)" src="Champions/AniviaSquare.png" alt="Anivia"></td></tr>
+        <tr><td><img id ="4" draggable="true" ondragstart="drag(event)" src="Champions/AnnieSquare.png" alt="Annie"></td></tr>
+        <tr><td><img id ="5" draggable="true" ondragstart="drag(event)" src="Champions/AsheSquare.png" alt="Ashe"></td></tr>
+        <tr><td><img id ="6" draggable="true" ondragstart="drag(event)" src="Champions/AurelionSquare.png" alt=""></td></tr>
+        <tr><td><img id ="7" draggable="true" ondragstart="drag(event)" src="Champions/AzirSquare.png" alt=""></td></tr>
+        <tr><td><img id ="8" draggable="true" ondragstart="drag(event)" src="Champions/BardSquare.png" alt=""></td></tr>
+        <tr><td><img id ="9" draggable="true" ondragstart="drag(event)" src="Champions/BlitzcrankSquare.png" alt=""></td></tr>
+        <tr><td><img id ="10" draggable="true" ondragstart="drag(event)" src="Champions/BraumSquare.png" alt=""></td></tr>
+        <tr><td><img id ="11" draggable="true" ondragstart="drag(event)" src="Champions/BrandSquare.png" alt=""></td></tr>
+        <tr><td><img id ="12" draggable="true" ondragstart="drag(event)" src="Champions/CaitlynSquare.png" alt=""></td></tr>
+        <tr><td><img id ="14" draggable="true" ondragstart="drag(event)" src="Champions/CamilleSquare.png" alt=""></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        <tr><td></td></tr>
+        -->
+        
+        <img class = "champ" id ="15" draggable="true" ondragstart="drag(event)" src="Champions/CassopeiaSquare.png" alt="Cassopeia">
+        <img class = "champ" id ="16" draggable="true" ondragstart="drag(event)" src="Champions/ChoGathSquare.png" alt="ChoGath">
+        <img class = "champ" id ="17" draggable="true" ondragstart="drag(event)" src="Champions/CorkiSquare.png" alt="Corki">
+        <img class = "champ" id ="18" draggable="true" ondragstart="drag(event)" src="Champions/DariusSquare.png" alt="Darius">
+        <img class = "champ" id ="13" draggable="true" ondragstart="drag(event)" src="Champions/DianaSquare.png" alt="Diana">
+        <!--
         <img id ="19" draggable="true" ondragstart="drag(event)" src="Champions/DravenSquare.png" alt="">
         <img id ="20" draggable="true" ondragstart="drag(event)" src="Champions/DrMundoSquare.png" alt="">
         <img id ="21" draggable="true" ondragstart="drag(event)" src="Champions/EkkoSquare.png" alt="">
@@ -262,6 +275,7 @@
         <img id ="132" draggable="true" ondragstart="drag(event)" src="Champions/YorickSquare.png" alt="">
         <img id ="133" draggable="true" ondragstart="drag(event)" src="Champions/YuumiSquare.png" alt="">
         <img id ="134" draggable="true" ondragstart="drag(event)" src="Champions/ZacSquare.png" alt="">
+      </table>
       -->
       </div>
 </body>
