--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <tr><td><img id ="65" draggable="true" ondragstart="drag(event)" src="Champions/MalzaharSquare.png" alt="Malzahar"></td></tr>
         <tr><td><img id ="66" draggable="true" ondragstart="drag(event)" src="Champions/MaokaiSquare.png" alt="Maokai"></td></tr>
         <tr><td><img id ="67" draggable="true" ondragstart="drag(event)" src="Champions/Master_YiSquare.png" alt="Master Yi"></td></tr>
-        <tr><td><img id ="68" draggable="true" ondragstart="drag(event)" src="Champions/MissFortuneSquare.png" alt=""></td></tr>
+        <tr><td><img id ="68" draggable="true" ondragstart="drag(event)" src="Champions/MissFortuneSquare.png" alt="Miss Fortune"></td></tr>
         <tr><td><img id ="69" draggable="true" ondragstart="drag(event)" src="Champions/MorganaSquare.png" alt="Morgana"></td></tr>
         <tr><td><img id ="70" draggable="true" ondragstart="drag(event)" src="Champions/NamiSquare.png" alt="Nami"></td></tr>
         <tr><td><img id ="71" draggable="true" ondragstart="drag(event)" src="Champions/NasusSquare.png" alt="Nasus"></td></tr>
