--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <input type="text" id="myInput" onkeyup="search()" placeholder="Search for Champions.." title="Type in a name">
      
        <table id= "champions">
-        <tr><td><img id ="1" onclick="clicked()" draggable="true" ondragstart="drag(event)" src="Champions/AatroxSquare.png" alt="Aatrox"></td></tr>
+        <tr><td><img id ="1" draggable="true" ondragstart="drag(event)" src="Champions/AatroxSquare.png" alt="Aatrox"></td></tr>
         <tr><td><img id ="Ahri" draggable="false" ondragstart="drag(event)" src="Champions/AhriSquare.png" alt="Ahri"> </td></tr>  
         <tr><td><img id ="Akali" draggable="true" ondragstart="drag(event)" src="Champions/AkaliSquare.png" alt="Akali"></td></tr>
         <tr><td><img id ="Alistar" draggable="true" ondragstart="drag(event)" src="Champions/AlistarSquare.png" alt="Alistar"></td></tr>
