--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             
               ev.preventDefault();
               var data = ev.dataTransfer.getData("text");
-              ev.target.appendChild(document.getElementById(data));
+              ev.target.clone().appendChild(document.getElementById(data));
             }
 
     </script>
@@ -120,7 +120,7 @@
      
        <table id= "champions">
         <tr><td><img id ="1" draggable="true" ondragstart="drag(event)" src="Champions/AatroxSquare.png" alt="Aatrox"></td></tr>
-        <tr><td><img id ="Ahri" draggable="false" ondragstart="drag(event)" src="Champions/AhriSquare.png" alt="Ahri"> </td></tr>  
+        <tr><td><img id ="Ahri" draggable="true" ondragstart="drag(event)" src="Champions/AhriSquare.png" alt="Ahri"> </td></tr>  
         <tr><td><img id ="Akali" draggable="true" ondragstart="drag(event)" src="Champions/AkaliSquare.png" alt="Akali"></td></tr>
         <tr><td><img id ="Alistar" draggable="true" ondragstart="drag(event)" src="Champions/AlistarSquare.png" alt="Alistar"></td></tr>
         <tr><td><img id ="2" draggable="true" ondragstart="drag(event)" src="Champions/AmumuSquare.png" alt="Amumu"></td></tr>
