--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               ev.dataTransfer.setData("text", ev.target.id);
             }
             function drag2(ev){
-              ev.dataTransfer.setData("text", ev.target.id);
+              //ev.dataTransfer.setData("text", ev.target.id);
             }
             var x = 1000;
             function deletg(ida){
