--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               ev.dataTransfer.setData("text", ev.target.id);
             }
             function drag2(ev){
-              document.getElementById(ida).style.display='none';
+              //document.getElementById(ida).style.display='none';
               //ev.dataTransfer.setData("text", ev.target.id);
             }
             var x = 1000;
