--- a/index.html
+++ b/index.html
@@ -98,8 +98,12 @@
               ev.dataTransfer.setData("text", ev.target.id);
             }
             function drag2(ev){
-              //document.getElementById(ida).style.display='none';
-              //ev.dataTransfer.setData("text", ev.target.id);
+              document.getElementById(ida).style.display='none';
+              
+            }
+            function drop2(ev){
+              var nodeCopy = document.getElementById(ev);
+              nodeCopy.ondragstart = drag2(ev);
             }
             var x = 1000;
             function deletg(ida){
@@ -111,7 +115,7 @@
               var data = ev.dataTransfer.getData("text");
               var nodeCopy = document.getElementById(data).cloneNode(true);
               nodeCopy.id = "potato"+x;
-              nodeCopy.ondragstart = drag2(event);
+              nodeCopy.ondrop = drop2(nodeCopy.id);
               ev.target.appendChild(nodeCopy);
             }
 
