--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
             }
             function drop2(ev){
               var nodeCopy = document.getElementById(ev);
-              nodeCopy.ondragstart = drag2(ev);
-              alert("drop");
+              //nodeCopy.ondragstart = drag2(ev);
+              //alert("drop");
             }
 
             var x = 1000;
