--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               ev.dataTransfer.setData("text", ev.target.id);
             }
             function drag2(ev){
-              document.getElementById(ida).style.display='none';
+              //document.getElementById(ida).style.display='none';
               
             }
             function drop2(ev){
@@ -114,7 +114,7 @@
               var data = ev.dataTransfer.getData("text");
               var nodeCopy = document.getElementById(data).cloneNode(true);
               nodeCopy.id = "potato"+x;
-              nodeCopy.ondrop = drop2(nodeCopy.id);
+              nodeCopy.ondragstart = drag2(nodeCopy.id);
               ev.target.appendChild(nodeCopy);
             }
 
