--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
               ev.dataTransfer.setData("text", ev.target.id);
             }
             function drag2(ev){
+              alert("drag2");
               //document.getElementById(ida).style.display='none';
               
             }
