--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
               var data = ev.dataTransfer.getData("text");
               var nodeCopy = document.getElementById(data).cloneNode(true);
               nodeCopy.id = "potato"+x;
-              nodeCopy.ondragstart = drag2(nodeCopy.id);
-              nodeCopy.ondrop = drop2(nodeCopy.id);
+              nodeCopy.ondragstart = "drag2(nodeCopy.id);
               ev.target.appendChild(nodeCopy);
             }
 
