--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               //document.getElementById(ida).style.display='none';
               
             }
-            function drop2(ev){
+            function drop2(){
               //var nodeCopy = document.getElementById(ev);
               //nodeCopy.ondragstart = drag2(ev);
               alert("drop");
@@ -115,7 +115,7 @@
               var data = ev.dataTransfer.getData("text");
               var nodeCopy = document.getElementById(data).cloneNode(true);
               nodeCopy.id = "potato"+x;
-              nodeCopy.ondragstart = "drag2(nodeCopy.id)";
+              nodeCopy.ondragstart = "drag2()";
               ev.target.appendChild(nodeCopy);
             }
 
