--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
               var data = ev.dataTransfer.getData("text");
               var nodeCopy = document.getElementById(data).cloneNode(true);
               nodeCopy.id = "potato"+x;
-              nodeCopy.addEventListener('ondragstart', function(){drag2()},false);
+              nodeCopy.removeEventListener('ondragstart',drag);
+              nodeCopy.addEventListener('ondragstart', drag2);
               ev.target.appendChild(nodeCopy);
             }
 
