--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
               var data = ev.dataTransfer.getData("text");
               var nodeCopy = document.getElementById(data).cloneNode(true);
               nodeCopy.id = "potato"+x;
-              nodeCopy.removeEventListener('ondragstart',drag);
-              nodeCopy.addEventListener('ondragstart', drag2);
+              nodeCopy.ondragstart = drag2;
+              //nodeCopy.removeEventListener('ondragstart',drag);
+              //nodeCopy.addEventListener('ondragstart', drag2);
               ev.target.appendChild(nodeCopy);
             }
 
