--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               ev.dataTransfer.setData("text", ev.target.id);
             }
             function drag2(ev){
-              //alert("drag2");
+              alert("drag2");
               document.getElementById(ev.target.id).style.display='none';
               
             }
