--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             }
             function drag2(ev){
               alert("drag2");
-              document.getElementById(ev.target.id).style.display='none';
+              ////document.getElementById(ev.target.id).style.display='none';
               
             }
             function drop2(){
