--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               var data = ev.dataTransfer.getData("text");
               var nodeCopy = document.getElementById(data).cloneNode(true);
               nodeCopy.id = "potato"+x;
-              nodeCopy.ondragstart = drag2(event);
+              nodeCopy.ondragstart = drag2;
               ev.target.appendChild(nodeCopy);
             }
 
