--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             }
             function drag2(ev){
               alert("drag2new");
-              //document.getElementById(ev.target.id).style.display='none';
+              document.getElementById(ev.target.id).style.display='none';
               
             }
             function drop2(){
@@ -115,7 +115,7 @@
               var data = ev.dataTransfer.getData("text");
               var nodeCopy = document.getElementById(data).cloneNode(true);
               nodeCopy.id = "potato"+x;
-              nodeCopy.ondragstart = "drag2(event)";
+              nodeCopy.ondragstart = drag2;
               ev.target.appendChild(nodeCopy);
             }
 
