--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               border: 3px solid #aaaaaa;
             }
             #div2 {
+              position: absolute;
               width: 1440px;
               height: 5000px;
               padding: 0px;
