--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
               border: 3px solid #aaaaaa;
               top: 600px;
             }
+            #ul {
+              columns: 3;
+            }
             #myInput {
               background-image: url('/css/searchicon.png');
               background-position: 10px 10px;
