--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               border: 3px solid #aaaaaa;
               top: 600px;
             }
-            #ul {
+            #myUl {
               columns: 3;
             }
             #myInput {
@@ -135,7 +135,7 @@
 
         <input type="text" id="myInput" onkeyup="search()" placeholder="Search for Champions.." title="Type in a name">
      
-       <ul id= "champions">
+       <ul id= "myUl">
         <li><img id ="1" draggable="true" ondragstart="drag(event)" src="Champions/AatroxSquare.png" alt="Aatrox"></li>
         <li><img id ="Ahri" draggable="true" ondragstart="drag(event)" src="Champions/AhriSquare.png" alt="Ahri"> </li>  
         <li><img id ="Akali" draggable="true" ondragstart="drag(event)" src="Champions/AkaliSquare.png" alt="Akali"></li>
