--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
               li = ul.getElementsByTagName("li");
               for (i = 0; i < li.length; i++) {
                   a = li[i].getElementsByTagName("img")[0].getAttribute("alt");
-                  txtValue = a.textContent || a.innerText;
+                  txtValue = a;
+                  alert(a);
                   if (txtValue.toUpperCase().indexOf(filter) > -1) {
                       li[i].style.display = "";
                   } else {
