--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               li = ul.getElementsByTagName("li");
               for (i = 0; i < li.length; i++) {
                   a = li[i].getElementsByTagName("img")[0].getAttribute("alt");
-                  if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                  if (a.toUpperCase().indexOf(filter) > -1) {
                       li[i].style.display = "";
                   } else {
                       li[i].style.display = "none";
