--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             }
             #myUl {
               columns: 6;
-            }
+              list-style-type: none;
+            }  
             #myInput {
               background-image: url('/css/searchicon.png');
               background-position: 10px 10px;
