--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
               top: 600px;
             }
             #myUl {
-              columns: 6;
+              columns: 9;
               list-style-type: none;
             }  
             #myInput {
               background-image: url('/css/searchicon.png');
               background-position: 10px 10px;
               background-repeat: no-repeat;
-              width: 100%;
+              width: 1440px;
               font-size: 16px;
               padding: 12px 20px 12px 40px;
               border: 1px solid #ddd;
