--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               background-image: url('/css/searchicon.png');
               background-position: 10px 10px;
               background-repeat: no-repeat;
-              width: 1440px;
+              width: 95%;
               font-size: 16px;
               padding: 12px 20px 12px 40px;
               border: 1px solid #ddd;
