--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             #myUl {
               columns: 9;
               list-style-type: none;
+              display: inline;
             }  
             #myInput {
               background-image: url('/css/searchicon.png');
