--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             #myUl {
               columns: 9;
               list-style-type: none;
-              display: inline;
+              display: inline-block
+;
             }  
             #myInput {
               background-image: url('/css/searchicon.png');
