--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
               top: 600px;
             }
             #myUl {
-              columns: 9;
               list-style-type: none;
-              display: inline-block
-;
-            }  
+     
+            } 
+            #myUl li{
+              display: inline-block;
+            } 
             #myInput {
               background-image: url('/css/searchicon.png');
               background-position: 10px 10px;
