--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             #div2 {
               position: absolute;
               width: 1440px;
-              height: 5000px;
+              height: 25
+00px;
               padding: 0px;
               border: 3px solid #aaaaaa;
               top: 600px;
