--- a/index.html
+++ b/index.html
@@ -48,11 +48,55 @@
               padding: 0px;
               border: 3px solid #aaaaaa;
             }
+            #ban6 {
+              position: absolute;
+              top: 100px;
+              left: 820px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #ban7 {
+              position: absolute;
+              top: 100px;
+              left: 940px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #ban8 {
+              position: absolute;
+              top: 100px;
+              left: 1060px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #ban9 {
+              position: absolute;
+              top: 100px;
+              left: 1180px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
+            #ban10 {
+              position: absolute;
+              top: 100px;
+              left: 1300px;
+              width: 120px;
+              height: 120px;
+              padding: 0px;
+              border: 3px solid #aaaaaa;
+            }
             #div2 {
               position: absolute;
               width: 1440px;
-              height: 25
-00px;
+              height: 2500px;
               padding: 0px;
               border: 3px solid #aaaaaa;
               top: 600px;
