--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@
         <div id="ban3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="ban4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="ban5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="ban6" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="ban7" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="ban8" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="ban9" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div id="ban10" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)">
 
         <input type="text" id="myInput" onkeyup="search()" placeholder="Search for Champions.." title="Type in a name">
