--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </script>
 
 </head>
-  <body style="background-color:grey;" >
+  <body style="background-color:black;" >
         <div id="ban1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="ban2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         <div id="ban3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
