--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
             #myUl li{
               display: inline-block;
             } 
+::placeholder {
+  color: white;
+}
             #myInput {
+              background-color: black;
               background-image: url('/css/searchicon.png');
               background-position: 10px 10px;
               background-repeat: no-repeat;
